# AutoForge-MCP

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: create_mcp.py  mcp_client.py
src/examples/: dice_roller_mcp.py
